@@ -23,7 +23,8 @@ Version 1.1.2 to be released
 - Enh: CCaptchaAction now supports unlimited tests by setting its testLimit to be 0 (Qiang)
 - Enh: Added $forceCopy parameter to CAssetManager::publish() (Qiang)
 - Enh: CTypeValidator now supports checking array data (Qiang)
-- Enh: Added CFileHelper::getExtension (Qiang)
+- Enh: Added CFileHelper::getExtension() (Qiang)
+- Enh: Added CModule::hasModule() (Qiang)
 - New #1005: added CWinCache (Sam Dark)
 
 Version 1.1.1 March 14, 2010
